# udesc

./: .gitignore
alg/bubble-sort/: main.c
alg/collatz/: a.out  main.c
alg/distancia-vetor/: a.out  main.c
alg/dupli-vetor/: a.out  main.c
alg/ensaiop2/: a.out  main.c
alg/gravata/: a.out  main.c
alg/pn/: a.out  main.c
alg/primo/: a.out  main.c
alg/repeticao-vetor/: a.out  main.c
alg/selection-sort/: a.out  main.c
alg/soma/: a.out  main.c
alg/vet/: a.out  main.c
ann/: interpolacao.py  metodo_trapezios.py  zeros_funcao.py
aoc/: digitos.asm  fat.asm  fatorial.asm  fib.asm  funcao.asm  sum.asm
ban/: AluguelVeiculos.brM3  Aviacao.brM3  Locadora.brM3  Loja.brM3  Trabalho.brM3  config.chc  lista1.sql  lista2.sql  logicoLocadora.txt  passagens.txt  trabalho.brM3
ban/ExemploUsoAPI/: build.xml
ban2/: exer.sql  locadora.xml  personalizacao.sql  triggers.sql
ban2/personalizadora/: README.md  package.json  personalizacao-tabelas.sql  triggers-personalizacao.sql
com/: notes.md
com/compilador/: AST.hs  Lexer.hs  Lexer.x  Main.hs  NParser.hs  NParser.info  NParser.y  README.md  Table.hs  example.j--
com/jasmine/: CHANGELOG.md  jasmine.cabal  stack.yaml
com/jasmine/exemplo/: cond.j--  mult-function.j--  simple-function.j--  teste1.j--
com/jasmine/src/: Lexer.hs  NParser.hs  NParser.y  Table.hs  Token.hs
eda/abb/: abb.c  abb.h
eda/fila/: aplicacao.c  arq.h  (+11 more)
emi/: acoes.py
mfo/: .gitignore  exercicios.qnt  notes.qnt
otcc/: main.rs
pfn/: fib.hs  lista1.hs  lista2-LucasViana.hs  trabalho.hs
poo/: Untitled Diagram.drawio  pratica.sql
(+15370 files in other folders)
