cabal-version:       2.2

name:                jasmine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/jasmine#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable jasmine
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  GADTs
  build-depends:       base >= 4.7 && < 5,
                       array >= 0.5
  other-modules:       AST
                       Lexer
                       NParser
                       Token
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
